...
                        children: [
                          Row(
                            mainAxisAlignment: MainAxisAlignment.spaceBetween,
                            crossAxisAlignment: CrossAxisAlignment.center,
                            children: [
                              Text(
                                "Outils",
                                style: TextStyle(
                                  fontSize: 24,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                              Row(
...
                                        return Stack(
                                          children: [
                                            SlideTransition(
                                              position: _slideAnimation,
                                              child: Text(
                                                _currentMoodPage == 0
                                                    ? "Humeur actuelle"
                                                    : "Fatigue actuelle",
                                                style: TextStyle(
                                                  fontSize: 24,
                                                  fontWeight: FontWeight.bold,
                                                ),
                                              ),
...
